--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -28,7 +28,7 @@
             <% end %>
           </div>
           <div class="post_text">
-            <%= post.content.html_safe %>
+            <%= raw post.content %>
           </div>
           <div class="clear"> </div>
           <hr>
