--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -8,13 +8,19 @@
       <% end %>
       <% if  current_user.role == 'admin' %>
           <h3><%= link_to 'Create Posts', posts_path %></h3>
+          <h3><%= link_to 'Edit All Users', 'users/all/edit' %></h3>
           <h3><%= link_to 'Create Alumni-News-Letters', new_alumni_news_letter_path %></h3>
       <% end %>
       <% if  current_user.role == 'president' %>
           <h3><%= link_to 'Create Posts', posts_path%></h3>
       <% end %>
       <% if current_user.confirmed_brother %>
+          <h3><%= link_to 'View Alumni-News-Letters', alumni_news_letters_path %></h3>
           <h3><%= link_to 'Submit Receipt', new_receipt_path %></h3>
+          <h3><%= link_to 'Submit Community Service', new_community_service_path %></h3>
+      <% end %>
+      <% if current_user.role == 'community service'%>
+          <h3><%= link_to 'Community Service Reports', community_services_path %></h3>
       <% end %>
     </div>
   </div>
