--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -9,6 +9,7 @@
       <% if  current_user.role == 'admin' %>
           <h3><%= link_to 'Create Posts', posts_path %></h3>
           <h3><%= link_to 'Edit All Users', 'users/all/edit' %></h3>
+          <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
           <h3><%= link_to 'Create Alumni-News-Letters', new_alumni_news_letter_path %></h3>
       <% end %>
       <% if  current_user.role == 'president' %>
