--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -780,6 +780,13 @@ only screen and (max-width: 760px),
   .valentines-table td:nth-of-type(11):before { content: "Payment Method"; }
   .valentines-table td:nth-of-type(12):before { content: "Edit Order"; }
   .valentines-table td:nth-of-type(13):before { content: "Delete Order"; }
+
+  .community-service-table td:nth-of-type(1):before { content: "Brothers Name"; }
+  .community-service-table td:nth-of-type(2):before { content: "Service Hours"; }
+  .community-service-table td:nth-of-type(3):before { content: "Event Name"; }
+  .community-service-table td:nth-of-type(4):before { content: "Event Link"; }
+  .community-service-table td:nth-of-type(5):before { content: "Event Link"; }
+  .community-service-table td:nth-of-type(6):before { content: "Edit"; }
 }
 
 /* Smartphones (portrait and landscape) ----------- */
