--- a/app/views/community_services/edit.html.erb
+++ b/app/views/community_services/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing community_service</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @community_service %> |
-<%= link_to 'Back', community_services_path %>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2 top-card-padding">
+    <div class="card">
+      <h1 align="center">Edit Community Service Report</h1>
+      <br/>
+      <%= render 'form' %>
+      <%= link_to 'Back', community_services_path %>
+    </div>
+  </div>
+</div>
