--- a/app/views/community_services/brothers_events.html.erb
+++ b/app/views/community_services/brothers_events.html.erb
@@ -4,7 +4,7 @@
       <div class="posts_checkboxes">
         <h1 align="center">Community Services Hours For Brother <%= "#{@user.first_name} #{@user.last_name}" %><% %></h1>
 
-        <table class="user-all-edit-table">
+        <table class="brothers-events-table">
           <thead>
           <tr>
             <th>Service Hours</th>
