--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -4,26 +4,26 @@
   <ul class="flipping-cards">
     <% @eboard.each do |position| %>
       <li>
-        <input type="checkbox" id="item<%= position.first.id %>">
-        <label for="item<%= position.first.id %>">
+        <input type="checkbox" id="item<%= position.id %>">
+        <label for="item<%= position.id %>">
           <span class="wrapper">
             <span class="image">
               <h3 class="postition-front-title">
-                <%= title(position.first.role) %>
+                <%= title(position.role) %>
               </h3>
               <%= image_tag "info.png", class: "postition-front-flip-icon" %>
-              <%= image_tag position.first.profile_picture_url, class:"user_img contact_img" if position.first.profile_picture? %>
+              <%= image_tag position.user.profile_picture_url, class:"user_img contact_img" if position.user.profile_picture? %>
             </span>
             <span class="back contact-back-background" >
               <h2>
-                <%= title(position.first.role) %>
+                <%= title(position.role) %>
               </h2>
               <h3>
-                <%= position.first.first_name if position.first.first_name? %> <%= " " + position.first.last_name if position.first.last_name? %>
+                <%= position.user.first_name if position.user.first_name? %> <%= " " + position.user.last_name if position.user.last_name? %>
               </h3>
               <h2>Email</h2>
               <h3>
-                <%= mail_to position.first.email %>
+                <%= mail_to position.user.email %>
               </h3>
             </span>
           </span>
