removed a tag intefereing

--- a/app/views/static_pages/admin.html.erb
+++ b/app/views/static_pages/admin.html.erb
@@ -1,29 +1,1 @@
-<div>
-  <table>
-    <tr>
-      <th>ID    </th>
-      <th>First Name    </th>
-      <th>Last Name     </th>
-      <th>Email</th>
-    </tr>
-    <% @users.each do |user| %>
-      <% if user.role =="requesting" %>
-        <tr>
-          <td><%= user.id %></td>
-          <td><%= user.first_name %></td>
-          <td><%= user.last_name %></td>
-          <td><%= user.email %></td>
-          <td><%= form_for user do |f| %>
-                    <%= f.hidden_field :role, :value => "member" %>
-                    <%= f.submit "Accept" %>
-                    <% end %></td>
-          <td><%= form_for user do |f| %>
-                    <%= f.hidden_field :role, :value => "no" %>
-                    <%= f.submit "Deny" %>
-            <% end %></td>
-        </tr>
-      <% end %>
-    <% end %>
-  </table>
-  <%= link_to "Edit Users", edit_all_path %>
-</div>
+<h1>Needs more information here</h1>
