--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -796,7 +796,7 @@ only screen and (max-width: 760px),
 
   .brothers-hours-table td:nth-of-type(1):before { content: "Brothers Name"; }
   .brothers-hours-table td:nth-of-type(2):before { content: "Total Hours"; }
-  .brothers-hours-table td:nth-of-type(3):before { content: "See All Of the Brothers Submitted Events"; }
+  .brothers-hours-table td:nth-of-type(3):before { content: "See All Events"; }
 }
 
 /* Smartphones (portrait and landscape) ----------- */
