updated resource page and ability file

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -870,3 +870,12 @@ body {
     background: none !important;
   }
 }
+
+//Box off resources into neater sections
+.resources {
+//  width: 33%;
+  float: left;
+  h2 {
+    text-decoration: underline;
+  }
+}
