--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -1,30 +1,57 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3 top-card-padding">
+  <div class="col-md-8 col-md-offset-2 top-card-padding">
     <div class="card_registration">
       <h1>Resources</h1>
-      <% if current_user.have_permissions?('writer') %>
-          <h3><%= link_to 'Create Posts', posts_path %></h3>
-          <h3><%= link_to 'Create Alumni-News-Letters', new_alumni_news_letter_path %></h3>
-      <% end %>
-      <% if  current_user.have_permissions?('admin') %>
-          <h3><%= link_to 'Create Posts', posts_path %></h3>
-          <h3><%= link_to 'Edit All Users', 'users/all/edit' %></h3>
-          <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
-          <h3><%= link_to 'All Brothers Community Service Hours', brothers_hours_path %></h3>
-          <h3><%= link_to 'Create Alumni-News-Letters', new_alumni_news_letter_path %></h3>
-      <% end %>
-      <% if  current_user.have_permissions?('community_service') %>
-          <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
-          <h3><%= link_to 'All Brothers Community Service Hours', brothers_hours_path %></h3>
-      <% end %>
-      <% if  current_user.have_permissions?('president') %>
-          <h3><%= link_to 'Create Posts', posts_path%></h3>
-      <% end %>
-      <% if current_user.confirmed_brother? %>
-          <h3><%= link_to 'View Alumni-News-Letters', alumni_news_letters_path %></h3>
-          <h3><%= link_to 'Submit Receipt', new_receipt_path %></h3>
-          <h3><%= link_to 'Submit Community Service', new_community_service_path %></h3>
-      <% end %>
+      <hr>
+
+        <% if current_user.have_permissions?('writer') %>
+          <div class="resources col-sm-4">
+            <h1>Writer</h1>
+            <hr>
+            <h3><%= link_to 'Create Posts', posts_path %></h3>
+            <h3><%= link_to 'Create Alumni-News-Letters', new_alumni_news_letter_path %></h3>
+          </div>
+        <% end %>
+        <% if  current_user.have_permissions?('admin') %>
+          <div class="resources col-sm-4">
+            <h2>Admin</h2>
+            <h3><%= link_to 'Create Posts', posts_path %></h3>
+            <h3><%= link_to 'Create Alumni-News-Letters', new_alumni_news_letter_path %></h3>
+            <h3><%= link_to 'Update Chairs', chairs_path %></h3>
+            <h3><%= link_to 'Update Eboard', eboards_path %></h3>
+            <h3><%= link_to 'Edit All Users', 'users/all/edit' %></h3>
+            <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
+            <h3><%= link_to 'Brothers Community Service', brothers_hours_path %></h3>
+          </div>
+        <% end %>
+
+        <% if  current_user.have_permissions?('community_service') %>
+          <div class="resources col-sm-4">
+            <h2>Community Service</h2>
+            <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
+            <h3><%= link_to 'Brothers Community Service', brothers_hours_path %></h3>
+          </div>
+        <% end %>
+
+        <% if  current_user.have_permissions?('president') %>
+          <div class="resources col-sm-4">
+            <h2>President</h2>
+            <h3><%= link_to 'Create Posts', posts_path%></h3>
+            <h3><%= link_to 'Update Chairs', chairs_path %></h3>
+            <h3><%= link_to 'Update Eboard', eboards_path %></h3>
+          </div>
+        <% end %>
+
+        <% if current_user.confirmed_brother? %>
+          <div class="resources col-sm-4">
+            <h2>Brothers</h2>
+            <h3><%= link_to 'View Alumni-News-Letters', alumni_news_letters_path %></h3>
+            <h3><%= link_to 'Submit Receipt', new_receipt_path %></h3>
+            <h3><%= link_to 'Submit Community Service', new_community_service_path %></h3>
+          </div>
+        <% end %>
+
+      <div class="clear"></div>
     </div>
   </div>
 </div>
