fixed small issue in email

--- a/app/views/user_mailer/mailchimp_sign_up_user_email.html.erb
+++ b/app/views/user_mailer/mailchimp_sign_up_user_email.html.erb
@@ -6,7 +6,7 @@
 
 <p>If you have filled out your profile <a href="<%= @domain %>users/<%= @user.id %>">here</a></p>
 
-<p>Then you can email you can click here to <a href="<%= @domainusers %><%= @user.id %>/subscribe">sign up!</a></p>
+<p>Then you can email you can click here to <a href="<%= @domain %><%= @user.id %>/subscribe">sign up!</a></p>
 
 <p>In Phi,</p>
 
