finished adding mailchimp login into the website

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,6 +19,11 @@
         <% end %>
         <div class="field">
         </div>
+        <% if @user.check_mailchimp_list_for_user? %>
+            <div style="margin-top: 4rem; font-size: 1.7rem">
+              <%= link_to "Sign Up For Alumni News Letter", subscribe_path %>
+            </div>
+        <% end %>
       </div>
       <!--makes sure everything stays on the page-->
       <div class="user_info">
@@ -36,6 +41,9 @@
         <% end %>
       </div>
       <div class="clear"></div>
+      <div style="margin-top: 4rem; font-size: 1.7rem">
+        <%= link_to "Back to Account Page", user_path %>
+      </div>
     </div>
   </div>
 </div>
