fixed link in email of new users not in mailchimp

--- a/app/views/user_mailer/mailchimp_sign_up_user_email.html.erb
+++ b/app/views/user_mailer/mailchimp_sign_up_user_email.html.erb
@@ -6,7 +6,7 @@
 
 <p>If you have filled out your profile <a href="<%= @domain %>/users/<%= @user.id %>/edit">here</a></p>
 
-<p>Then you can email you can click here to <a href="<%= @domain %>/<%= @user.id %>/subscribe">sign up!</a></p>
+<p>Then you can email you can click here to <a href="<%= @domain %>/users/<%= @user.id %>/subscribe">sign up!</a></p>
 
 <p>Otherwise you can sign up <a href="http://eepurl.com/bfz215">here!</a></p>
 
