--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -38,7 +38,7 @@
   <ul class="flipping-cards">
     <% @chairs.each do |chair| %>
         <li>
-          <input type="checkbox" id="item<%= position.chair_name %><%= chair.user.id %>">
+          <input type="checkbox" id="item<%= chair.chair_name %><%= chair.user.id %>">
           <label for="item<%= chair.user.id %>">
           <span class="wrapper">
             <span class="image">
