--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -23,7 +23,7 @@
     <%= f.label :role_id %><br>
     <%= f.number_field :role_id %>
   </div>
-  <div class="field">
+  <div class="field posts_checkboxes">
     <%= f.label :on_eboard %><br>
     <%= f.check_box :on_eboard %>
   </div>
