--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -17,8 +17,8 @@
             <h2>Admin</h2>
             <h3><%= link_to 'Create Posts', posts_path %></h3>
             <h3><%= link_to 'Create Alumni-News-Letters', new_alumni_news_letter_path %></h3>
-            <h3><%= link_to 'Update Chairs', chairs_path %></h3>
-            <h3><%= link_to 'Update Eboard', eboards_path %></h3>
+            <h3><%= link_to 'Update Positions', positions_path %></h3>
+            <h3><%= link_to 'Update Roles', roles_path %></h3>
             <h3><%= link_to 'Edit All Users', 'users/all/edit' %></h3>
             <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
             <h3><%= link_to 'Brothers Community Service', brothers_hours_path %></h3>
@@ -37,8 +37,7 @@
           <div class="resources col-sm-4">
             <h2>President</h2>
             <h3><%= link_to 'Create Posts', posts_path%></h3>
-            <h3><%= link_to 'Update Chairs', chairs_path %></h3>
-            <h3><%= link_to 'Update Eboard', eboards_path %></h3>
+            <h3><%= link_to 'Update Positions', positions_path %></h3>
           </div>
         <% end %>
 
