--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -262,7 +262,12 @@ hr {
 
 //Flipping Cards
 //http://codepen.io/elad2412/pen/jyiqw
-.flipping-cards li{position:relative; float:left; margin-right:10px;}
+.flipping-cards li{
+  position:relative;
+  float:left;
+  margin-left: 10px;
+  margin-right:10px;
+}
 .flipping-cards label{  display:block; width:200px; height:250px; cursor:pointer;}
 
 .flipping-cards .wrapper{
