--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
         <% end %>
         <div class="field">
         </div>
-        <% if @user.check_mailchimp_list_for_user?.asd %>
+        <% if @user.check_mailchimp_list_for_user? %>
             <div style="margin-top: 4rem; font-size: 1.7rem">
               <%= link_to "Sign Up For Alumni News Letter", subscribe_path %>
             </div>
