trying to fix prod issue

--- a/app/views/static_pages/local_fast_facts.html.erb
+++ b/app/views/static_pages/local_fast_facts.html.erb
@@ -16,6 +16,7 @@
         <li>2010 - 2011 - Chapter Excellence in Chapter and Risk Management</li>
       </ul>
 
+      2)      Massock Award 1976  (Alumni Communications)
       <h4>National Awards</h4>
       <ul>
         <li>1975 – Angelo Award</li>
@@ -62,6 +63,7 @@
           <li>Jobeth and John Bowers</li>
           <li>Steve Nims and Rob Sauda</li>
           <li>Emmett and Jackson Coakley</li>
+          <li>Danny and Cody Abdeen</li>
       </ul>
     </div>
   </div>
