--- a/app/assets/stylesheets/positions.scss
+++ b/app/assets/stylesheets/positions.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the positions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#position_user_id {
+  width: 450px;
+}
