--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -22,6 +22,7 @@
             <h3><%= link_to 'Edit All Users', 'users/all/edit' %></h3>
             <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
             <h3><%= link_to 'Brothers Community Service', brothers_hours_path %></h3>
+            <h3><%= link_to 'Manually Enter Community Service', community_service_manually_path %></h3>
           </div>
         <% end %>
 
@@ -30,6 +31,7 @@
             <h2>Community Service</h2>
             <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
             <h3><%= link_to 'Brothers Community Service', brothers_hours_path %></h3>
+            <h3><%= link_to 'Manually Enter Community Service', community_service_manually_path %></h3>
           </div>
         <% end %>
 
