no data turbo link

--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= position.role_id %></td>
         <td><%= position.on_eboard %></td>
         <td><%= link_to 'Show', position %></td>
-        <td><%= link_to 'Edit', edit_position_path(position) %></td>
+        <td><%= link_to 'Edit', edit_position_path(position), 'data-no-turbolink' => true %></td>
         <td><%= link_to 'Destroy', position, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Position', new_position_path %>
+<%= link_to 'New Position', new_position_path, 'data-no-turbolink' => true %>
