anyone can add photos

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -21,6 +21,7 @@
             <li><%= link_to "Contact Us", contact_us_path, class: "nav-item"%></li>
             <li><%= link_to "Parents", information_for_parents_path, class: "nav-item"%></li>
             <li><%= link_to "Galleries", galleries_path, class: "nav-item"%></li>
+            <li><%= link_to "Submit Images", new_image_path, class: "nav-item"%></li>
           </ul>
         </li>
       </ul>
