--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,29 +1,31 @@
 <%= form_for @image, :html => {:multipart => true} do |f| %>
-  <% if @image.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@image.errors.count, 'error') %> prohibited this image from being saved:</h2>
+    <% if @image.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@image.errors.count, 'error') %> prohibited this image from being saved:</h2>
 
-      <ul>
-      <% @image.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-    <div style="float: left; width: 50%">
-  <div class="field">
-    <%= f.text_field :name, placeholder: 'Picture Name' %>
-    <%= f.file_field :picture, placeholder: 'Image File' %>
-    <%= f.text_field :remote_picture_url, placeholder: 'Or input url of photo' %>
-    <p>Link Image To Post Story</p>
-    <%= f.collection_select :post_id, @posts.reverse, :id, :title, :include_blank => true, class: 'col-md-3' %>
-    <p>Photot Gallery</p>
-    <%= f.collection_select :gallery_id, @galleries.reverse, :id, :name, :include_blank => true, class: 'col-md-3' %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+          <ul>
+            <% @image.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
         </div>
+    <% end %>
+    <div style="float: left; width: 50%">
+      <div class="field">
+        <%= f.text_field :name, placeholder: 'Picture Name' %>
+        <%= f.file_field :picture, placeholder: 'Image File' %>
+        <%= f.text_field :remote_picture_url, placeholder: 'Or input url of photo' %>
+        <% if current_user.have_permissions?('writer') || current_user.have_permissions?('admin')%>
+            <p>Link Image To Post Story</p>
+            <%= f.collection_select :post_id, @posts.reverse, :id, :title, :include_blank => true, class: 'col-md-3' %>
+        <% end %>
+        <p>Photot Gallery</p>
+        <%= f.collection_select :gallery_id, @galleries.reverse, :id, :name, :include_blank => true, class: 'col-md-3' %>
+      </div>
+      <div class="actions">
+        <%= f.submit %>
+      </div>
+    </div>
 <% end %>
 
 <div style="float: right">
