--- a/app/views/paddles/edit.html.erb
+++ b/app/views/paddles/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing paddle</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <h1>Editing Paddle</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @paddle %> |
-<%= link_to 'Back', paddles_path %>
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
