--- a/app/views/paddles/new.html.erb
+++ b/app/views/paddles/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New paddle</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <h1>New Paddle</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', paddles_path %>
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
