--- a/app/views/alumni_eternals/show.html.erb
+++ b/app/views/alumni_eternals/show.html.erb
@@ -1,29 +1,32 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>User:</strong>
-  <%= @alumni_eternal.user_id %>
-</p>
-
-<p>
-  <strong>First name:</strong>
-  <%= @alumni_eternal.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @alumni_eternal.last_name %>
-</p>
-
-<p>
-  <strong>Picture:</strong>
-  <%= @alumni_eternal.picture %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @alumni_eternal.description %>
-</p>
-
-<%= link_to 'Edit', edit_alumni_eternal_path(@alumni_eternal) %> |
-<%= link_to 'Back', alumni_eternals_path %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <div style="float: left; display: inline-block; padding: 10px;width: 50%;">
+        <div>
+          <%= image_tag "http://upload.wikimedia.org/wikipedia/commons/1/13/Daniel_Ingram_Profile.png", style: "display: block;"%>
+          <h3 align="center">
+            <%= "#{@alumni_eternal.first_name} #{@alumni_eternal.last_name}" %>
+          </h3>
+          <h4 align="center">
+            <%= @alumni_eternal.description %>
+          </h4>
+        </div>
+      </div>
+      <div align="center" style="float: right;width: 50%;">
+        <h3>Stories from brothers</h3>
+        <hr>
+        <% @alumni_eternal.alumni_eternal_stories.each do |stories| %>
+            <div style="padding-bottom: 10px;">
+              <%= stories.story %>
+              <hr style=" border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+            </div>
+        <% end %>
+        <h3>Leave <%= @alumni_eternal.first_name %> a Story</h3>
+        <% @alumni_eternal_story = AlumniEternalStory.new %>
+        <%= render partial: 'alumni_eternal_stories/form' %>
+      </div>
+      <div class="clear"></div>
+      <br>
+    </div>
+  </div>
+</div>
